<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">AndroidBumpTest</string>
    <string name="start_bumpapi_activity">Start BumpAPI Activity</string>
    <string name="connected_with_bump">Connected with Bump</string>
    <string name="send_message">Send message:</string>
    <string name="connected_to">Connected to %s</string>
    <string name="send_message_button">Send</string>
    <string name="disconnect_bump">Disconnect</string>
    <string name="log">Log:</string>
</resources>
