<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:id="@+id/lblConnectedTo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connected_to" android:layout_marginBottom="10sp"></TextView>
    <TextView android:id="@+id/lblSendText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send_message"></TextView>
    <EditText android:text="Test" android:id="@+id/txtSendText" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="14sp"></EditText>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/btnSendMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send_message_button"></Button>
        <Button android:id="@+id/btnDisconnectBump" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disconnect_bump"></Button>
    </LinearLayout>
    <TextView android:id="@+id/lblLog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/log"></TextView>
    <ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:layout_height="fill_parent">
        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
            <TextView android:text="" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblLogArea" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
